Progress bar added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Quiz App</title>
 </head>
 <body>
+    <div id="progress-bar">
+        <div id ="bar-fill">0</div>
+    </div>
     <div class="container">
         <h1>Simple Quiz</h1>
         <hr>
