--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
     <div id="progress-bar">
-        <div id ="bar-fill">0</div>
+        <div id="bar-fill">0</div>
     </div>
+
     <div class="container">
+        <div class="top">
         <h1>Simple Quiz</h1>
+        <div class="timer">
+            <img id="timer-img" src="Icon/timer.png"> 
+            <span id="seconds">15s</span>
+        </div>
+        </div>
         <hr>
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
