Progress bar modified

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="progress-bar">
-        <div id="bar-fill">0</div>
+        <div id="bar-fill"></div>
     </div>
 
     <div class="container">
