--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Simple Quiz</h1>
         <div class="timer">
             <img id="timer-img" src="Icon/timer.png"> 
-            <span id="seconds">15s</span>
+            <span id="seconds"></span>
         </div>
         </div>
         <hr>
